cabal-version: >=1.10
name:          hash-tree
version:       0.1.0
license:       BSD3
license-file:  LICENSE
maintainer:    Kazu Yamamoto <kazu@iij.ad.jp>
author:        Kazu Yamamoto <kazu@iij.ad.jp>
synopsis:      Merkle Hash Tree
description:
    Purely functional Merkle hash tree which
    implements appe nd-only logs and
    provides both inclusion proof and consistency proof.

category:      Data
build-type:    Simple

source-repository head
    type:     git
    location: https://github.com/kazu-yamamoto/hash-tree

library
    exposed-modules:  Data.HashTree
    other-modules:    Data.HashTree.Internal
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <5,
        bytestring,
        containers,
        crypton >=1.1.0 && <1.2,
        ram

test-suite spec
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test .
    other-modules:
        HashTreeSpec
        Data.HashTree
        Data.HashTree.Internal

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <5,
        QuickCheck,
        bytestring,
        base64-bytestring,
        containers,
        crypton,
        hash-tree,
        hspec,
        ram
